Add Dtos and Mapping and Photo Configuration and Configs and Unit of work and infrastructure Registeration

--- a/Ecom.Core/Ecom.Core.csproj
+++ b/Ecom.Core/Ecom.Core.csproj
@@ -7,14 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Services\**" />
-    <EmbeddedResource Remove="Services\**" />
-    <None Remove="Services\**" />
+    <Folder Include="Entities\" />
+    <Folder Include="Entities\Product" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Entities\Product" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
